# gen/pb/form/form_service.pb.validate.go
@@ -1339,3 +1339,105 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = DuplicateFormTemplateResponseValidationError{}
+
+// Validate checks the field values on ConfigResponse with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *ConfigResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ConfigResponse with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in ConfigResponseMultiError,
+// or nil if none found.
+func (m *ConfigResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ConfigResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for MaxTemplatesPerMerchant
+
+	if len(errors) > 0 {
+		return ConfigResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// ConfigResponseMultiError is an error wrapping multiple validation errors
+// returned by ConfigResponse.ValidateAll() if the designated constraints
+// aren't met.
+type ConfigResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ConfigResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ConfigResponseMultiError) AllErrors() []error { return m }
+
+// ConfigResponseValidationError is the validation error returned by
+// ConfigResponse.Validate if the designated constraints aren't met.
+type ConfigResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ConfigResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ConfigResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ConfigResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ConfigResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ConfigResponseValidationError) ErrorName() string { return "ConfigResponseValidationError" }
+
+// Error satisfies the builtin error interface
+func (e ConfigResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sConfigResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ConfigResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ConfigResponseValidationError{}
